solucionado problema de visibilidad de banner superior para la versión en español y solucionado bug con logo. Fue ocultado.

--- a/sites/default/themes/cop10/css/fresh.css
+++ b/sites/default/themes/cop10/css/fresh.css
@@ -242,3 +242,7 @@ div.view-Resources div.view-content div.views-field-title span.field-content{
 color:#802537;
 font-weight:bolder;
 }
+
+#logo {
+display:none;
+}
